# balance_codes

./: README.md
3D_sim_projects/4C/: compare_4c.m  construct_pos_file_hulu.m  hulu_heat_map.m  load_target_CTCF.m  maximum_entropy_fminunc.m  my_draw.m  review_parafit_write_bash.m
3D_sim_projects/4C/hulu/: set_sim.sh
3D_sim_projects/4C/hulu/chip/: hulu_CTCF.bam_peaks.txt
3D_sim_projects/4C/human_HEC-1-B/HEC-1-B_F/: set_sim.sh
3D_sim_projects/4C/human_HEC-1-B/HEC-1-B_FF/: set_sim.sh
3D_sim_projects/4C/human_HEC-1-B/HEC-1-B_FFRR/: set_sim.sh
3D_sim_projects/4C/human_HEC-1-B/HEC-1-B_R1/: set_sim.sh
3D_sim_projects/4C/human_HEC-1-B/HEC-1-B_R2/: set_sim.sh
3D_sim_projects/4C/human_HEC-1-B/HEC-1-B_RF/: set_sim.sh
3D_sim_projects/4C/human_HEC-1-B/HEC-1-B_RRFF/: set_sim.sh
3D_sim_projects/4C/human_HEC-1-B/HEC-1-B_WT/: set_sim.sh
3D_sim_projects/4C/human_HEC-1-B/HEC-1-B_WT_fit/: set_sim_fit.sh
3D_sim_projects/loop_extrusion_3d_sim_ver5/: CMakeLists.txt  main.cpp
3D_sim_projects/set_range_and_CTCF_ver3/: CMakeLists.txt  main.cpp  set_range_and_CTCF_ver3.kdev4
bayesian/: BDeU_local_score.m  CTCF_Jaspar.mat  Data_12_0_0_bedgraph_123456_0_bedgraph_mean.mat  attach_int_2_int.m  chr_lib.mat  high_dim_index.m  my_Assoc.m  my_MMPC.m  my_MakeADTree.m  my_MakeContab.m  my_MakeVaryNode.m  my_MaxMinHeuristic.m  my_barMMPC.m  my_call_CBS.m  my_discrete_Bayes_paraUni_strucUni_Exact.m  my_discrete_Bayes_paraUni_strucUni_Greedy.m  my_nchoosek.m  test_factors_of_gene_exp_D036.m
mono_allele/: GSE115746_complete_metadata_28467-cells.xlsx  dep_data.m  test_group_cell_by_gene_exp_dep.m
mono_allele/2019_10_12/: 23178_beta__class_bar.eps  23178_beta__merge_bar.eps  23178_gamma__class_bar.eps  23178_gamma__merge_bar.eps
mono_allele/3D_sim_projects/get_heat_map/: CMakeLists.txt  main.cpp
